Versão 02 - Abrir camera e mandar a foto para uma pasta no dispositivo, tela do post e de vizualizar a foto

--- a/SemanadaTecnologia/app/src/main/AndroidManifest.xml
+++ b/SemanadaTecnologia/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a18175168.semanadatecnologia">
 
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Cadastro"
+            android:label="Post">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".VisualizarFoto" />
+        </activity>
+        <activity android:name=".VisualizarFoto" android:label="Visualizar Foto"></activity>
+        <activity android:theme="@style/Theme.Transparent" android:name=".CameraActivity"></activity>
     </application>
 
 </manifest>
